finish mouse input

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,9 @@
      <Compile Include="Assets\Scripts\IUserInput.cs" />
      <Compile Include="Assets\Scripts\JoystickInput.cs" />
      <Compile Include="Assets\Scripts\KeyboardInput.cs" />
+     <Compile Include="Assets\Scripts\LeftArmAnimFix.cs" />
+     <Compile Include="Assets\Scripts\MyButton.cs" />
+     <Compile Include="Assets\Scripts\MyTimer.cs" />
      <Compile Include="Assets\Scripts\OnGroundSensor.cs" />
      <Compile Include="Assets\Scripts\RootMotionController.cs" />
      <Compile Include="Assets\Scripts\TriggerController.cs" />
