--- a/DarkSoulDemo.csproj
+++ b/DarkSoulDemo.csproj
@@ -85,7 +85,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BattleManager.cs" />
     <Compile Include="Assets\Scripts\ActorController.cs" />
+    <Compile Include="Assets\Scripts\ActorManager.cs" />
     <Compile Include="Assets\Scripts\ButtonTest.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\DummyIUserInput.cs" />
@@ -102,6 +104,7 @@
     <Compile Include="Assets\Scripts\OnGroundSensor.cs" />
     <Compile Include="Assets\Scripts\RootMotionController.cs" />
     <Compile Include="Assets\Scripts\TriggerController.cs" />
+    <Compile Include="Assets\Scripts\WeaponManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
