--- a/DarkSoulDemo.csproj
+++ b/DarkSoulDemo.csproj
@@ -85,9 +85,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\BattleManager.cs" />
     <Compile Include="Assets\Scripts\ActorController.cs" />
     <Compile Include="Assets\Scripts\ActorManager.cs" />
+    <Compile Include="Assets\Scripts\BattleManager.cs" />
     <Compile Include="Assets\Scripts\ButtonTest.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\DummyIUserInput.cs" />
@@ -95,6 +95,7 @@
     <Compile Include="Assets\Scripts\FSMOnEnter.cs" />
     <Compile Include="Assets\Scripts\FSMOnExit.cs" />
     <Compile Include="Assets\Scripts\FSMOnUpdate.cs" />
+    <Compile Include="Assets\Scripts\Helper\TransformHelper.cs" />
     <Compile Include="Assets\Scripts\IUserInput.cs" />
     <Compile Include="Assets\Scripts\JoystickInput.cs" />
     <Compile Include="Assets\Scripts\KeyboardInput.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="Assets\Scripts\OnGroundSensor.cs" />
     <Compile Include="Assets\Scripts\RootMotionController.cs" />
     <Compile Include="Assets\Scripts\TriggerController.cs" />
+    <Compile Include="Assets\Scripts\WeaponController.cs" />
     <Compile Include="Assets\Scripts\WeaponManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
