--- a/DarkSoulDemo.csproj
+++ b/DarkSoulDemo.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Assets\Scripts\FSMOnExit.cs" />
     <Compile Include="Assets\Scripts\FSMOnUpdate.cs" />
     <Compile Include="Assets\Scripts\Helper\TransformHelper.cs" />
+    <Compile Include="Assets\Scripts\IActorManager.cs" />
     <Compile Include="Assets\Scripts\IUserInput.cs" />
     <Compile Include="Assets\Scripts\JoystickInput.cs" />
     <Compile Include="Assets\Scripts\KeyboardInput.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="Assets\Scripts\MyTimer.cs" />
     <Compile Include="Assets\Scripts\OnGroundSensor.cs" />
     <Compile Include="Assets\Scripts\RootMotionController.cs" />
+    <Compile Include="Assets\Scripts\StateManager.cs" />
     <Compile Include="Assets\Scripts\TriggerController.cs" />
     <Compile Include="Assets\Scripts\WeaponController.cs" />
     <Compile Include="Assets\Scripts\WeaponManager.cs" />
