--- a/DarkSoulDemo.Editor.Plugins.csproj
+++ b/DarkSoulDemo.Editor.Plugins.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Assets\Plugins\Editor\RootMotion\Shared Scripts\SerializedContent.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\JSON\readme.txt" />
     <None Include="Assets\PostProcessing\Editor Resources\Monitors\HistogramCompute.compute" />
     <None Include="Assets\PostProcessing\Editor Resources\Monitors\HistogramRender.shader" />
     <None Include="Assets\PostProcessing\Editor Resources\Monitors\ParadeRender.shader" />
